@@ -76,7 +76,7 @@ Once you have installed the package, you may want to test it:
     .........................................................................
     ................................................................
     ----------------------------------------------------------------------
-    Ran 495 tests in 0.463s
+    Ran 494 tests in 0.461s
 
     OK
 
