@@ -28,7 +28,7 @@ block data that follows.
    block   head         count    count   bytes             block size
    type    byte                  byte    per index   (encoded)     (decoded)
    -------------------------------------------------------------------------
-     0     0x00..0x80   0..128   no      raw          1..129          0..128
+     0     0x00..0x9f  0..4096   no      raw         1..4097         0..4096
      1     0xa0..0xbf    0..31   no       1            1..32              32
      2     0xc2         0..255   yes      2           2..512           8,192
      3     0xc3         0..255   yes      3           2..767       2,097,152
@@ -80,22 +80,22 @@ ratio, and the number of blocks of each type:
    0.00000357   0.00008678         0         0         0        16         0
    0.00000643   0.00015536         0         0         0        16         0
    0.00001157   0.00027874         0         0         0        16         0
-   0.00002082   0.00057420         0         0      3913         1         0
-   0.00003748   0.00084397         0         0      4080         1         0
+   0.00002082   0.00057423         0         0      3914         1         0
+   0.00003748   0.00084394         0         0      4085         1         0
    0.00006747   0.00132376         0         0      4096         0         0
-   0.00012144   0.00218725         0         0      4096         0         0
-   0.00021859   0.00374156         0         0      4096         0         0
-   0.00039346   0.00653821         0         0      4096         0         0
-   0.00070824   0.01157171         0         0      4096         0         0
-   0.00127482   0.02062804         0         0      4096         0         0
-   0.00229468   0.03691709         0         0      4096         0         0
-   0.00413043   0.06410414         0    631808      1628         0         0
-   0.00743477   0.09050894         0   1048576         0         0         0
-   0.01338259   0.13760078         0   1048576         0         0         0
-   0.02408866   0.22164792         0   1048576         0         0         0
-   0.04335959   0.37073088         0   1048576         0         0         0
-   0.07804726   0.65535405      5951   1042579         0         0         0
-   0.14048506   0.99192983    285433    223548         0         0         0
-   0.25287311   1.00781268    262144         0         0         0         0
-   0.45517160   1.00781268    262144         0         0         0         0
-   0.81930887   1.00781268    262144         0         0         0         0
+   0.00012144   0.00218719         0         0      4096         0         0
+   0.00021859   0.00374150         0         0      4096         0         0
+   0.00039346   0.00653845         0         0      4096         0         0
+   0.00070824   0.01157218         0         0      4096         0         0
+   0.00127482   0.02062941         0         0      4096         0         0
+   0.00229468   0.03691334         0         0      4096         0         0
+   0.00413043   0.06410542         0    634074      1620         0         0
+   0.00743477   0.09051070         0   1048576         0         0         0
+   0.01338259   0.13759786         0   1048576         0         0         0
+   0.02408866   0.22166717         0   1048576         0         0         0
+   0.04335959   0.37071779         1   1048575         0         0         0
+   0.07804726   0.65549386      6157   1042384         0         0         0
+   0.14048506   0.98861155    176021    223348         0         0         0
+   0.25287311   1.00024432      8192         0         0         0         0
+   0.45517160   1.00024432      8192         0         0         0         0
+   0.81930887   1.00024432      8192         0         0         0         0
